# get-quant-done

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pyproject.toml
infra/: gqd-conventions.json  gqd-protocols.json  gqd-state.json
src/gqd/: __init__.py  contracts.py
src/gqd/agents/: gqd-backtester.md  gqd-bibliographer.md  gqd-consistency-checker.md  gqd-debugger.md  gqd-executor.md  gqd-paper-writer.md  gqd-planner.md  gqd-referee.md  gqd-researcher.md  gqd-verifier.md
src/gqd/commands/: branch-hypothesis.md  execute-phase.md  health.md  new-project.md  plan-phase.md  resume-work.md  review-paper.md  verify-work.md
src/gqd/core/: config.py  constants.py  conventions.py  git_ops.py  kernel.py  observability.py  phases.py  state.py
src/gqd/hooks/: statusline.py
src/gqd/mcp/: __init__.py  conventions_server.py  errors_server.py  patterns_server.py  protocols_server.py  state_server.py  verification_server.py
src/gqd/specs/references/orchestration/: agent-delegation.md
src/gqd/specs/references/protocols/: backtesting-protocols.md  fixed-income-protocols.md  option-pricing-protocols.md  portfolio-optimization-protocols.md  risk-management-protocols.md  time-series-protocols.md
src/gqd/specs/references/verification/: llm-quant-errors.md
