[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "get-quant-done"
version = "0.1.0"
description = "AI copilot for autonomous quantitative finance research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jesse Weigel", email = "jesse@jesseweigel.com" },
]
keywords = ["quantitative-finance", "ai", "research", "backtesting", "derivatives", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/JesseRWeigel/get-quant-done"
Repository = "https://github.com/JesseRWeigel/get-quant-done"
Issues = "https://github.com/JesseRWeigel/get-quant-done/issues"

[project.scripts]
gqd = "gqd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gqd"]
